[package]
name = "burry-escrow"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "burry_escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
switchboard-solana = "0.29"